# security_chat

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  realtime.py  schemas.py
flutter_app/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml  win_build_verbose.txt
flutter_app/android/: gradle.properties
flutter_app/android/app/: build.gradle.kts
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/screens/: change_password.dart  chat_view.dart  chats.dart  create_chat.dart  login.dart
flutter_app/lib/services/: api.dart  chat_key_service.dart  crypto_service.dart  session.dart  voice_recorder_service.dart
flutter_app/lib/theme/: app_theme.dart
flutter_app/lib/widgets/: message_tile.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/macos/lib/: main.dart
flutter_app/macos/lib/screens/: chat_view.dart  chats.dart  login.dart
flutter_app/macos/lib/services/: api.dart
flutter_app/macos/lib/widgets/: message_tile.dart
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
flutter_app/windows/test/: widget_test.dart
(+3 files in other folders)
